--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 SITE_NAME_HEADER=Digital Garden
-SITE_BASE_URL=http://blog.bookst
+SITE_BASE_URL=http://blog.bookst.xy
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
