--- a/.env
+++ b/.env
@@ -1,15 +1,14 @@
-THEME=https://raw.githubusercontent.com/Bluemoondragon07/chime-theme/HEAD/theme.css
-BASE_THEME=light
+
 SITE_NAME_HEADER=和光
 SITE_BASE_URL=https://blog.bookst.xyz/
-SHOW_CREATED_TIMESTAMP=false
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
-SHOW_UPDATED_TIMESTAMP=false
+SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
-NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
-NOTE_ICON_INTERNAL_LINKS=false
-NOTE_ICON_BACK_LINKS=false
+NOTE_ICON_TITLE=true
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_BACK_LINKS=true
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
