--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+BASE_THEME=light
 SITE_NAME_HEADER=和光
 SITE_BASE_URL=https://blog.bookst.xyz/
 SHOW_CREATED_TIMESTAMP=true
